--- a/courses.html
+++ b/courses.html
@@ -1,46 +1,53 @@
 <main>
   <section class="courses-layout">
+
     <div class="course-card small" style="grid-area: small1;">
-      <img src="course1.png" alt="Small Course 1">
+      <img src="american_institutions.png" alt="American Institutions">
       <div class="overlay"></div>
       <div class="text-overlay">
-        <h3>Small Course 1</h3>
+        <h3>American Institutions</h3>
       </div>
     </div>
+
     <div class="course-card small" style="grid-area: small2;">
-      <img src="course2.png" alt="Small Course 2">
+      <img src="communication.png" alt="Communication">
       <div class="overlay"></div>
       <div class="text-overlay">
-        <h3>Small Course 2</h3>
+        <h3>Communication</h3>
       </div>
     </div>
+
     <div class="course-card big" style="grid-area: humanities;">
-      <img src="course3.png" alt="Humanities">
+      <img src="course1.png" alt="Humanities">
       <div class="overlay"></div>
       <div class="text-overlay">
         <h3>Humanities (HU)</h3>
       </div>
     </div>
+
     <div class="course-card big" style="grid-area: ai;">
-      <img src="course4.png" alt="AI">
+      <img src="course2.png" alt="AI (Artificial Intelligence)">
       <div class="overlay"></div>
       <div class="text-overlay">
         <h3>Artificial Intelligence (AI)</h3>
       </div>
     </div>
+
     <div class="course-card small" style="grid-area: small3;">
-      <img src="course5.png" alt="Small Course 3">
+      <img src="international_global.png" alt="International & Global">
       <div class="overlay"></div>
       <div class="text-overlay">
-        <h3>Small Course 3</h3>
+        <h3>International & Global</h3>
       </div>
     </div>
+
     <div class="course-card small" style="grid-area: small4;">
-      <img src="course6.png" alt="Small Course 4">
+      <img src="life_science.png" alt="Life Science">
       <div class="overlay"></div>
       <div class="text-overlay">
-        <h3>Small Course 4</h3>
+        <h3>Life Science</h3>
       </div>
     </div>
+
   </section>
 </main>
