--- a/courses.html
+++ b/courses.html
@@ -1,53 +1,81 @@
-<main>
-  <section class="courses-layout">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Courses - Jesús Lopez Aguilar</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-    <div class="course-card small" style="grid-area: small1;">
-      <img src="american_institutions.png" alt="American Institutions">
-      <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>American Institutions</h3>
-      </div>
+<body>
+
+  <nav>
+    <div class="nav-container">
+      <ul id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="courses.html" class="active-nav-link">Courses</a></li>
+        <li><a href="achievements.html">Achievements</a></li>
+      </ul>
     </div>
+  </nav>
 
-    <div class="course-card small" style="grid-area: small2;">
-      <img src="communication.png" alt="Communication">
-      <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Communication</h3>
+  <main>
+    <section class="courses-layout">
+      <div class="course-card small" style="grid-area: small1;">
+        <img src="american_institution.png" alt="American Institution">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>American Institution</h3>
+        </div>
       </div>
-    </div>
 
-    <div class="course-card big" style="grid-area: humanities;">
-      <img src="course1.png" alt="Humanities">
-      <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Humanities (HU)</h3>
+      <div class="course-card small" style="grid-area: small2;">
+        <img src="communication.png" alt="Communication">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>Communication</h3>
+        </div>
       </div>
-    </div>
 
-    <div class="course-card big" style="grid-area: ai;">
-      <img src="course2.png" alt="AI (Artificial Intelligence)">
-      <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Artificial Intelligence (AI)</h3>
+      <div class="course-card big" style="grid-area: humanities;">
+        <img src="course1.png" alt="Humanities">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>Humanities (HU)</h3>
+        </div>
       </div>
-    </div>
 
-    <div class="course-card small" style="grid-area: small3;">
-      <img src="international_global.png" alt="International & Global">
-      <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>International & Global</h3>
+      <div class="course-card big" style="grid-area: ai;">
+        <img src="course2.png" alt="Artificial Intelligence (AI)">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>Artificial Intelligence (AI)</h3>
+        </div>
       </div>
-    </div>
 
-    <div class="course-card small" style="grid-area: small4;">
-      <img src="life_science.png" alt="Life Science">
-      <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Life Science</h3>
+      <div class="course-card small" style="grid-area: small3;">
+        <img src="international_global.png" alt="International & Global">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>International & Global</h3>
+        </div>
       </div>
-    </div>
 
-  </section>
-</main>
+      <div class="course-card small" style="grid-area: small4;">
+        <img src="life_science.png" alt="Life Science">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>Life Science</h3>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    © 2025 Jesús Lopez Aguilar. All rights reserved.
+  </footer>
+
+</body>
+</html>
