--- a/courses.html
+++ b/courses.html
@@ -23,11 +23,12 @@
 
   <main>
     <section class="courses-layout">
+
       <div class="course-card small" style="grid-area: small1;">
-        <img src="american_institution.png" alt="American Institution">
+        <img src="american_institution.png" alt="American Institutions">
         <div class="overlay"></div>
         <div class="text-overlay">
-          <h3>American Institution</h3>
+          <h3>American Institutions (AI)</h3>
         </div>
       </div>
 
@@ -35,7 +36,7 @@
         <img src="communication.png" alt="Communication">
         <div class="overlay"></div>
         <div class="text-overlay">
-          <h3>Communication</h3>
+          <h3>Communication (CM)</h3>
         </div>
       </div>
 
@@ -48,28 +49,29 @@
       </div>
 
       <div class="course-card big" style="grid-area: ai;">
-        <img src="course2.png" alt="Artificial Intelligence (AI)">
+        <img src="life_science.png" alt="Life Science">
         <div class="overlay"></div>
         <div class="text-overlay">
-          <h3>Artificial Intelligence (AI)</h3>
+          <h3>Life Science (LS)</h3>
         </div>
       </div>
 
       <div class="course-card small" style="grid-area: small3;">
-        <img src="international_global.png" alt="International & Global">
+        <img src="social_science.png" alt="Social Science">
         <div class="overlay"></div>
         <div class="text-overlay">
-          <h3>International & Global</h3>
+          <h3>Social Science (SS)</h3>
         </div>
       </div>
 
       <div class="course-card small" style="grid-area: small4;">
-        <img src="life_science.png" alt="Life Science">
+        <img src="physical_science.png" alt="Physical Science">
         <div class="overlay"></div>
         <div class="text-overlay">
-          <h3>Life Science</h3>
+          <h3>Physical Science (PS)</h3>
         </div>
       </div>
+
     </section>
   </main>
 
