--- a/courses.html
+++ b/courses.html
@@ -53,14 +53,14 @@
                 </div>
             </div>
             <div class="course-card">
-                 <img src="images/course2.jpg" alt="Fine Arts Course Image"> <div class="overlay"></div>
+                 <img src="images/course2.png" alt="Fine Arts Course Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Fine Arts (FA)</h3>
                      <p>Explore artistic expression and its impact on culture.</p>
                 </div>
             </div>
              <div class="course-card">
-                 <img src="images/course1.jpg" alt="Humanities Course Image"> <div class="overlay"></div>
+                 <img src="images/course1.png" alt="Humanities Course Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Humanities (HU)</h3>
                      <p>Study philosophy, literature, and art.</p>
@@ -74,49 +74,49 @@
                 </div>
             </div>
              <div class="course-card">
-                 <img src="images/composition.jpg" alt="Composition Image"> <div class="overlay"></div>
+                 <img src="images/composition.png" alt="Composition Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Composition (EN)</h3>
                      <p>Developing effective writing skills.</p>
                 </div>
             </div>
             <div class="course-card">
-                 <img src="images/quantitative_literacy.jpg" alt="Quantitative Literacy Image"> <div class="overlay"></div>
+                 <img src="images/quantitative_literacy.png" alt="Quantitative Literacy Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Quantitative Literacy (QL/QS)</h3>
                      <p>Applying mathematical skills.</p>
                 </div>
             </div>
              <div class="course-card">
-                 <img src="images/life_science.jpg" alt="Life Science Image"> <div class="overlay"></div>
+                 <img src="images/life_science.png" alt="Life Science Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Life Science</h3>
                      <p>Study of living organisms.</p>
                 </div>
             </div>
             <div class="course-card">
-                 <img src="images/physical_science.jpg" alt="Physical Science Image"> <div class="overlay"></div>
+                 <img src="images/physical_science.png" alt="Physical Science Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Physical Science (PS)</h3>
                      <p>Exploring non-living systems.</p>
                 </div>
             </div>
              <div class="course-card">
-                 <img src="images/communication.jpg" alt="Communication Image"> <div class="overlay"></div>
+                 <img src="images/communication.png" alt="Communication Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Communication (CM)</h3>
                      <p>Effective human communication.</p>
                 </div>
             </div>
             <div class="course-card">
-                 <img src="images/international_global.jpg" alt="International and Global Image"> <div class="overlay"></div>
+                 <img src="images/international_global.png" alt="International and Global Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>International & Global (IG)</h3>
                      <p>Understanding global perspectives.</p>
                 </div>
             </div>
              <div class="course-card">
-                 <img src="images/lifelong_wellness.jpg" alt="Lifelong Wellness Image"> <div class="overlay"></div>
+                 <img src="images/lifelong_wellness.png" alt="Lifelong Wellness Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Lifelong Wellness (LW)</h3>
                      <p>Principles of health and well-being.</p>
