--- a/courses.html
+++ b/courses.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <!-- YOUR FULL NAV (NOW ACCURATE) -->
+  <!-- NAVBAR -->
   <nav>
     <div class="nav-container">
       <ul id="nav-links">
@@ -23,8 +23,16 @@
     </div>
   </nav>
 
-  <!-- MAIN SECTION (THE COURSES GRID) -->
+  <!-- MAIN CONTENT -->
   <main>
+
+    <!-- INTRO BOX FIRST -->
+    <section class="intro">
+      <h2>My College Courses</h2>
+      <p>Below are the courses I have completed or am in the process of completing as part of my educational journey. Each course falls into specific general education or degree requirements. This visual layout helps organize the progress I've made across different academic areas.</p>
+    </section>
+
+    <!-- COURSES GRID NEXT -->
     <section class="courses-layout">
 
       <!-- Top Row -->
@@ -78,6 +86,7 @@
       </div>
 
     </section>
+
   </main>
 
   <!-- FOOTER -->
