--- a/courses.html
+++ b/courses.html
@@ -23,16 +23,16 @@
     </div>
   </nav>
 
-  <!-- MAIN CONTENT -->
+  <!-- MAIN -->
   <main>
 
     <!-- INTRO BOX FIRST -->
     <section class="intro">
       <h2>My College Courses</h2>
-      <p>Below are the courses I have completed or am in the process of completing as part of my educational journey. Each course falls into specific general education or degree requirements. This visual layout helps organize the progress I've made across different academic areas.</p>
+      <p>Below are the courses I have completed or am in the process of completing as part of my educational journey at Salt Lake Community College. Each course fulfills specific general education or degree requirements.</p>
     </section>
 
-    <!-- COURSES GRID NEXT -->
+    <!-- COURSES GRID -->
     <section class="courses-layout">
 
       <!-- Top Row -->
@@ -60,7 +60,6 @@
         </div>
       </div>
 
-      <!-- Bottom Row -->
       <div class="course-card small" style="grid-area: small3;">
         <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
         <div class="overlay"></div>
@@ -74,6 +73,39 @@
         <div class="overlay"></div>
         <div class="text-overlay">
           <h3>Composition (EN)</h3>
+        </div>
+      </div>
+
+      <!-- Bottom Row (continuing) -->
+      <div class="course-card small" style="grid-area: small5;">
+        <img src="images/international_global.png" alt="International & Global">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>International & Global (IG)</h3>
+        </div>
+      </div>
+
+      <div class="course-card small" style="grid-area: small6;">
+        <img src="images/life_science.png" alt="Life Science">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>Life Science (LS)</h3>
+        </div>
+      </div>
+
+      <div class="course-card small" style="grid-area: small7;">
+        <img src="images/social_science.png" alt="Social Science">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>Social Science (SS)</h3>
+        </div>
+      </div>
+
+      <div class="course-card small" style="grid-area: small8;">
+        <img src="images/physical_science.png" alt="Physical Science">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>Physical Science (PS)</h3>
         </div>
       </div>
 
