--- a/courses.html
+++ b/courses.html
@@ -26,7 +26,7 @@
   <!-- MAIN -->
   <main>
 
-    <!-- INTRO BOX FIRST -->
+    <!-- INTRO BOX -->
     <section class="intro">
       <h2>My College Courses</h2>
       <p>Below are the courses I have completed or am in the process of completing as part of my educational journey at Salt Lake Community College. Each course fulfills specific general education or degree requirements.</p>
@@ -35,7 +35,6 @@
     <!-- COURSES GRID -->
     <section class="courses-layout">
 
-      <!-- Top Row -->
       <div class="course-card big" style="grid-area: ai;">
         <img src="images/american_institutions.png" alt="American Institutions">
         <div class="overlay"></div>
@@ -76,7 +75,14 @@
         </div>
       </div>
 
-      <!-- Bottom Row (continuing) -->
+      <div class="course-card big" style="grid-area: humanities;">
+        <img src="images/course1.png" alt="Humanities">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>Humanities (HU)</h3>
+        </div>
+      </div>
+
       <div class="course-card small" style="grid-area: small5;">
         <img src="images/international_global.png" alt="International & Global">
         <div class="overlay"></div>
@@ -106,14 +112,6 @@
         <div class="overlay"></div>
         <div class="text-overlay">
           <h3>Physical Science (PS)</h3>
-        </div>
-      </div>
-
-      <div class="course-card big" style="grid-area: humanities;">
-        <img src="images/course1.png" alt="Humanities">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Humanities (HU)</h3>
         </div>
       </div>
 
