--- a/courses.html
+++ b/courses.html
@@ -35,6 +35,7 @@
     <!-- COURSES GRID -->
     <section class="courses-layout">
 
+      <!-- Big Top Left -->
       <div class="course-card big" style="grid-area: ai;">
         <img src="images/american_institutions.png" alt="American Institutions">
         <div class="overlay"></div>
@@ -43,6 +44,7 @@
         </div>
       </div>
 
+      <!-- Small Cards -->
       <div class="course-card small" style="grid-area: small1;">
         <img src="images/communication.png" alt="Communication">
         <div class="overlay"></div>
@@ -75,14 +77,6 @@
         </div>
       </div>
 
-      <div class="course-card big" style="grid-area: humanities;">
-        <img src="images/course1.png" alt="Humanities">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Humanities (HU)</h3>
-        </div>
-      </div>
-
       <div class="course-card small" style="grid-area: small5;">
         <img src="images/international_global.png" alt="International & Global">
         <div class="overlay"></div>
@@ -112,6 +106,24 @@
         <div class="overlay"></div>
         <div class="text-overlay">
           <h3>Physical Science (PS)</h3>
+        </div>
+      </div>
+
+      <!-- New Fine Arts Card -->
+      <div class="course-card small" style="grid-area: small9;">
+        <img src="images/course2.png" alt="Fine Arts">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>Fine Arts (FA)</h3>
+        </div>
+      </div>
+
+      <!-- Big Bottom Right -->
+      <div class="course-card big" style="grid-area: humanities;">
+        <img src="images/course1.png" alt="Humanities">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+          <h3>Humanities (HU)</h3>
         </div>
       </div>
 
