--- a/courses.html
+++ b/courses.html
@@ -26,110 +26,104 @@
   <!-- MAIN -->
   <main>
 
-    <!-- INTRO BOX -->
-    <section class="intro">
-      <h2>My College Courses</h2>
-      <p>Below are the courses I have completed or am in the process of completing as part of my educational journey at Salt Lake Community College. Each course fulfills specific general education or degree requirements.</p>
-    </section>
+  <section class="intro">
+    <h2>My College Courses</h2>
+    <p>Below are the courses I have completed or am in the process of completing as part of my educational journey at Salt Lake Community College. Each course fulfills specific general education or degree requirements.</p>
+  </section>
 
-    <!-- COURSES GRID -->
-    <section class="courses-layout">
+  <section class="courses-layout">
 
-      <!-- Big Top Left -->
-      <div class="course-card big" style="grid-area: ai;">
-        <img src="images/american_institutions.png" alt="American Institutions">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>American Institutions (AI)</h3>
-        </div>
+    <div class="course-card big">
+      <img src="images/american_institutions.png" alt="American Institutions">
+      <div class="overlay"></div>
+      <div class="text-overlay">
+        <h3>American Institutions (AI)</h3>
       </div>
+    </div>
 
-      <!-- Small Cards -->
-      <div class="course-card small" style="grid-area: small1;">
-        <img src="images/communication.png" alt="Communication">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Communication (CM)</h3>
-        </div>
+    <div class="course-card small">
+      <img src="images/communication.png" alt="Communication">
+      <div class="overlay"></div>
+      <div class="text-overlay">
+        <h3>Communication (CM)</h3>
       </div>
+    </div>
 
-      <div class="course-card small" style="grid-area: small2;">
-        <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Quantitative Literacy (QL)</h3>
-        </div>
+    <div class="course-card small">
+      <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
+      <div class="overlay"></div>
+      <div class="text-overlay">
+        <h3>Quantitative Literacy (QL)</h3>
       </div>
+    </div>
 
-      <div class="course-card small" style="grid-area: small3;">
-        <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Lifelong Wellness (LW)</h3>
-        </div>
+    <div class="course-card small">
+      <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
+      <div class="overlay"></div>
+      <div class="text-overlay">
+        <h3>Lifelong Wellness (LW)</h3>
       </div>
+    </div>
 
-      <div class="course-card small" style="grid-area: small4;">
-        <img src="images/composition.png" alt="Composition">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Composition (EN)</h3>
-        </div>
+    <div class="course-card small">
+      <img src="images/composition.png" alt="Composition">
+      <div class="overlay"></div>
+      <div class="text-overlay">
+        <h3>Composition (EN)</h3>
       </div>
+    </div>
 
-      <div class="course-card small" style="grid-area: small5;">
-        <img src="images/international_global.png" alt="International & Global">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>International & Global (IG)</h3>
-        </div>
+    <div class="course-card small">
+      <img src="images/international_global.png" alt="International & Global">
+      <div class="overlay"></div>
+      <div class="text-overlay">
+        <h3>International & Global (IG)</h3>
       </div>
+    </div>
 
-      <div class="course-card small" style="grid-area: small6;">
-        <img src="images/life_science.png" alt="Life Science">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Life Science (LS)</h3>
-        </div>
+    <div class="course-card small">
+      <img src="images/life_science.png" alt="Life Science">
+      <div class="overlay"></div>
+      <div class="text-overlay">
+        <h3>Life Science (LS)</h3>
       </div>
+    </div>
 
-      <div class="course-card small" style="grid-area: small7;">
-        <img src="images/social_science.png" alt="Social Science">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Social Science (SS)</h3>
-        </div>
+    <div class="course-card small">
+      <img src="images/social_science.png" alt="Social Science">
+      <div class="overlay"></div>
+      <div class="text-overlay">
+        <h3>Social Science (SS)</h3>
       </div>
+    </div>
 
-      <div class="course-card small" style="grid-area: small8;">
-        <img src="images/physical_science.png" alt="Physical Science">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Physical Science (PS)</h3>
-        </div>
+    <div class="course-card small">
+      <img src="images/physical_science.png" alt="Physical Science">
+      <div class="overlay"></div>
+      <div class="text-overlay">
+        <h3>Physical Science (PS)</h3>
       </div>
+    </div>
 
-      <!-- New Fine Arts Card -->
-      <div class="course-card small" style="grid-area: small9;">
-        <img src="images/course2.png" alt="Fine Arts">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Fine Arts (FA)</h3>
-        </div>
+    <div class="course-card small">
+      <img src="images/course2.png" alt="Fine Arts">
+      <div class="overlay"></div>
+      <div class="text-overlay">
+        <h3>Fine Arts (FA)</h3>
       </div>
+    </div>
 
-      <!-- Big Bottom Right -->
-      <div class="course-card big" style="grid-area: humanities;">
-        <img src="images/course1.png" alt="Humanities">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Humanities (HU)</h3>
-        </div>
+    <div class="course-card big">
+      <img src="images/course1.png" alt="Humanities">
+      <div class="overlay"></div>
+      <div class="text-overlay">
+        <h3>Humanities (HU)</h3>
       </div>
+    </div>
 
-    </section>
+  </section>
 
-  </main>
+</main>
 
   <!-- FOOTER -->
   <footer>
