--- a/courses.html
+++ b/courses.html
@@ -31,7 +31,7 @@
     <p>Below are the courses I have completed or am in the process of completing as part of my educational journey at Salt Lake Community College. Each course fulfills specific general education or degree requirements.</p>
   </section>
 
-  <section class="courses-layout">
+  <section class="courses-container">
 
     <div class="course-card big">
       <img src="images/american_institutions.png" alt="American Institutions">
