--- a/courses.html
+++ b/courses.html
@@ -25,104 +25,74 @@
 
   <!-- MAIN -->
   <main>
-
   <section class="intro">
     <h2>My College Courses</h2>
-    <p>Below are the courses I have completed or am in the process of completing as part of my educational journey at Salt Lake Community College. Each course fulfills specific general education or degree requirements.</p>
+    <p>Below are the courses I've completed...</p>
   </section>
 
   <section class="courses-container">
 
-    <div class="course-card big">
-      <img src="images/american_institutions.png" alt="American Institutions">
+    <div class="course-card big" style="grid-area: ai;">
+      <img src="images/american_institutions.png">
       <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>American Institutions (AI)</h3>
-      </div>
+      <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
     </div>
 
-    <div class="course-card small">
-      <img src="images/communication.png" alt="Communication">
+    <div class="course-card small" style="grid-area: cm;">
+      <img src="images/communication.png">
       <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Communication (CM)</h3>
-      </div>
+      <div class="text-overlay"><h3>Communication (CM)</h3></div>
     </div>
 
-    <div class="course-card small">
-      <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
+    <div class="course-card small" style="grid-area: ql;">
+      <img src="images/quantitative_literacy.png">
       <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Quantitative Literacy (QL)</h3>
-      </div>
+      <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
     </div>
 
-    <div class="course-card small">
-      <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
+    <div class="course-card small" style="grid-area: en;">
+      <img src="images/composition.png">
       <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Lifelong Wellness (LW)</h3>
-      </div>
+      <div class="text-overlay"><h3>Composition (EN)</h3></div>
     </div>
 
-    <div class="course-card small">
-      <img src="images/composition.png" alt="Composition">
+    <div class="course-card small" style="grid-area: lw;">
+      <img src="images/lifelong_wellness.png">
       <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Composition (EN)</h3>
-      </div>
+      <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
     </div>
 
-    <div class="course-card small">
-      <img src="images/international_global.png" alt="International & Global">
+    <div class="course-card small" style="grid-area: ig;">
+      <img src="images/international_global.png">
       <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>International & Global (IG)</h3>
-      </div>
+      <div class="text-overlay"><h3>International & Global (IG)</h3></div>
     </div>
 
-    <div class="course-card small">
-      <img src="images/life_science.png" alt="Life Science">
+    <div class="course-card small" style="grid-area: ls;">
+      <img src="images/life_science.png">
       <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Life Science (LS)</h3>
-      </div>
+      <div class="text-overlay"><h3>Life Science (LS)</h3></div>
     </div>
 
-    <div class="course-card small">
-      <img src="images/social_science.png" alt="Social Science">
+    <div class="course-card small" style="grid-area: fa;">
+      <img src="images/course2.png">
       <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Social Science (SS)</h3>
-      </div>
+      <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
     </div>
 
-    <div class="course-card small">
-      <img src="images/physical_science.png" alt="Physical Science">
+    <div class="course-card small" style="grid-area: ss;">
+      <img src="images/social_science.png">
       <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Physical Science (PS)</h3>
-      </div>
+      <div class="text-overlay"><h3>Social Science (SS)</h3></div>
     </div>
 
-    <div class="course-card small">
-      <img src="images/course2.png" alt="Fine Arts">
+    <div class="course-card big" style="grid-area: hu;">
+      <img src="images/course1.png">
       <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Fine Arts (FA)</h3>
-      </div>
-    </div>
-
-    <div class="course-card big">
-      <img src="images/course1.png" alt="Humanities">
-      <div class="overlay"></div>
-      <div class="text-overlay">
-        <h3>Humanities (HU)</h3>
-      </div>
+      <div class="text-overlay"><h3>Humanities (HU)</h3></div>
     </div>
 
   </section>
-
 </main>
 
   <!-- FOOTER -->
