--- a/courses.html
+++ b/courses.html
@@ -36,6 +36,7 @@
       <img src="images/american_institutions.png">
       <div class="overlay"></div>
       <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
+      <div class="course-card big" style="grid-area: ai; grid-column: span 2; grid-row: span 2;">
     </div>
 
     <div class="course-card small" style="grid-area: cm;">
