--- a/courses.html
+++ b/courses.html
@@ -32,11 +32,10 @@
 
   <section class="courses-container">
 
-    <div class="course-card big" style="grid-area: ai;">
-      <img src="images/american_institutions.png">
+    <div class="course-card big" style="grid-area: ai; grid-column: span 2; grid-row: span 2;">
+      <img src="images/american_institutions.png" alt="American Institutions">
       <div class="overlay"></div>
       <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
-      <div class="course-card big" style="grid-area: ai; grid-column: span 2; grid-row: span 2;">
     </div>
 
     <div class="course-card small" style="grid-area: cm;">
