--- a/courses.html
+++ b/courses.html
@@ -27,13 +27,13 @@
   <main>
   <section class="intro">
     <h2>My College Courses</h2>
-    <p>Below are the courses I've completed...</p>
+    <p>Below are the courses I've completed as part of my education at SLCC. Each fulfills a general education requirement.</p>
   </section>
 
   <section class="courses-container">
 
     <div class="course-card big" style="grid-area: ai; grid-column: span 2; grid-row: span 2;">
-      <img src="images/american_institutions.png" alt="American Institutions">
+      <img src="images/american_institutions.png">
       <div class="overlay"></div>
       <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
     </div>
@@ -86,10 +86,16 @@
       <div class="text-overlay"><h3>Social Science (SS)</h3></div>
     </div>
 
-    <div class="course-card big" style="grid-area: hu;">
+    <div class="course-card big" style="grid-area: hu; grid-column: span 2; grid-row: span 2;">
       <img src="images/course1.png">
       <div class="overlay"></div>
       <div class="text-overlay"><h3>Humanities (HU)</h3></div>
+    </div>
+
+    <div class="course-card small" style="grid-area: ps;">
+      <img src="images/physical_science.png">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
     </div>
 
   </section>
